1-1-19
- implemented Armadillo and its corresponding command
- fixed tons of stack/heap overflows
- rewrote the memory dumper again (memutils_dump_memory_new)
- fixed the Makefile

11-16-18
- make code more concise with "handlers", debuggee function pointers that
keep clutter in another file

11-12-18
- pid_of_program more concise

11-11-2018
- fixed return value of get_thread_name_from_thread_port
- functions with no parameters now take now parameters
- pid_of_program is about 1000x faster

11-10-2018

- added this ChangeLog
- added structure to the source code directories
- a much better Makefile to go with new organization
- (iosdbg) prompt restored after a function not called by me returned
- fixed crash that would happen if a breakpoint was attempted to be deleted
when iosdbg wasn't attached to anything
- new command: thread list, list threads from the debuggee
- new command: thread select, select a thread to focus on in the debuggee
- real thread ID is shown
- real thread name is shown
- fixed breakpoint race condition
- tons and tons of smaller bugfixes