@@ -1,7 +1,7 @@
 SDK=/var/theos/sdks/iPhoneOS11.2.sdk
 CC=clang
 CFLAGS=-arch arm64 -isysroot $(SDK)
-LDFLAGS=-lreadline7.0 -lhistory7.0 -lncurses -larmadillo
+LDFLAGS=-lreadline7.0 -lhistory7.0 -lncurses -larmadillo 
 SRCDIR=source
 
 OBJECT_FILES = $(SRCDIR)/breakpoint.o \
