@@ -4,6 +4,8 @@ Implementation for a breakpoint.
 
 #include "breakpoint.h"
 
+//void *
+
 // Create a new breakpoint.
 struct breakpoint *breakpoint_new(unsigned long long location){
 	// invalid address
@@ -29,6 +31,8 @@ struct breakpoint *breakpoint_new(unsigned long long location){
 	
 	bp->hit_count = 0;
 	bp->disabled = 0;
+	
+	debuggee->num_breakpoints++;
 
 	return bp;
 }
@@ -41,7 +45,7 @@ bp_error_t breakpoint_at_address(unsigned long long address){
 		return BP_FAILURE;
 
 	// write BRK #1 to the address we're breakpointing at
-	memutils_write_memory_to_location(bp->location, BRK);
+	memutils_write_memory_to_location(bp->location, CFSwapInt32(0x000020d4));//BRK);
 
 	// add this breakpoint to the debuggee's linked list of breakpoints
 	linkedlist_add(debuggee->breakpoints, bp);
@@ -79,6 +83,8 @@ bp_error_t breakpoint_delete(int breakpoint_id){
 			linkedlist_delete(debuggee->breakpoints, current_breakpoint);
 
 			printf("Breakpoint %d deleted\n", current_breakpoint->id);
+			
+			debuggee->num_breakpoints--;
 
 			return BP_SUCCESS;
 		}
@@ -87,6 +93,75 @@ bp_error_t breakpoint_delete(int breakpoint_id){
 	}
 
 	return BP_FAILURE;
+}
+
+bp_error_t breakpoint_disable(int breakpoint_id){
+	if(!debuggee->breakpoints->front)
+		return BP_FAILURE;
+
+	if(breakpoint_id == 0)
+		return BP_FAILURE;
+
+	struct node_t *current = debuggee->breakpoints->front;
+
+	while(current){
+		struct breakpoint *current_breakpoint = (struct breakpoint *)current->data;
+
+		if(current_breakpoint->id == breakpoint_id){
+			memutils_write_memory_to_location(current_breakpoint->location, current_breakpoint->old_instruction);
+			current_breakpoint->disabled = 1;
+			return BP_SUCCESS;
+		}
+
+		current = current->next;
+	}
+
+	return BP_FAILURE;	
+}
+
+bp_error_t breakpoint_enable(int breakpoint_id){
+	if(!debuggee->breakpoints->front)
+		return BP_FAILURE;
+
+	if(breakpoint_id == 0)
+		return BP_FAILURE;
+
+	struct node_t *current = debuggee->breakpoints->front;
+
+	while(current){
+		struct breakpoint *current_breakpoint = (struct breakpoint *)current->data;
+
+		if(current_breakpoint->id == breakpoint_id){
+			memutils_write_memory_to_location(current_breakpoint->location, CFSwapInt32(BRK));
+			current_breakpoint->disabled = 0;
+			return BP_SUCCESS;
+		}
+
+		current = current->next;
+	}
+
+	return BP_FAILURE;	
+}
+
+int breakpoint_disabled(int breakpoint_id){
+	if(!debuggee->breakpoints->front)
+		return BP_FAILURE;
+
+	if(breakpoint_id == 0)
+		return BP_FAILURE;
+
+	struct node_t *current = debuggee->breakpoints->front;
+
+	while(current){
+		struct breakpoint *current_breakpoint = (struct breakpoint *)current->data;
+
+		if(current_breakpoint->id == breakpoint_id)
+			return current_breakpoint->disabled;
+
+		current = current->next;
+	}
+
+	return 0;
 }
 
 // Delete every breakpoint
@@ -129,7 +204,7 @@ void breakpoint_enable_all(void){
 
 	while(current){
 		struct breakpoint *current_breakpoint = (struct breakpoint *)current->data;
-		memutils_write_memory_to_location(current_breakpoint->location, BRK);
+		memutils_write_memory_to_location(current_breakpoint->location, CFSwapInt32(BRK));
 		current = current->next;
 	}
 }
